[ADD] 카카오 로그인 및 구글 소셜 로그인 환경 구축

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ShareHands_frontend</string>
+    <string name="NATIVE_APP_KEY">b03a4ceae5d55bdc92ecfbe00ddaf2c1</string>
 </resources>
