[FEAT] Monthly Calendar 선택 기능 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">ShareHands_frontend</string>
     <string name="NATIVE_APP_KEY">b03a4ceae5d55bdc92ecfbe00ddaf2c1</string>
+    <string name="monthly_plans">월별 계획</string>
 
     <string-array name="custom_weekdays">
         <item>일</item>
