--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,11 @@
         <item>12월</item>
     </string-array>
 
+    <string-array name="daily_timetable_header">
+        <item></item>
+        <item>시간별 봉사 계획</item>
+    </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
