--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="recommend_info">따뜻한 마음을 나눌 곳들을 추천드립니다.</string>
     <string name="hot_services">이번 주 인기 봉사</string>
+    <string name="search_description">원하는 봉사활동을 검색해보세요!</string>
 
 </resources>
