[FEAT] 봉사찾기 카테고리 별 ViewPager 및 정렬 Spinner 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,10 @@
         <item>중랑구</item>
         <item>노원구</item>
     </string-array>
+
+    <string-array name="service_order">
+        <item>최신순</item>
+        <item>좋아요순</item>
+        <item>스크랩순</item>
+    </string-array>
 </resources>
