[FEAT] 모집글 작성 사진, 범주, 이름, 개요, 마감일, 기간 입력 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,16 @@
         <item>좋아요순</item>
         <item>스크랩순</item>
     </string-array>
+
+    <string-array name="category">
+        <item>교육</item>
+        <item>문화</item>
+        <item>보건</item>
+        <item>환경</item>
+        <item>기술</item>
+        <item>해외</item>
+        <item>캠페인</item>
+        <item>재난</item>
+        <item>기타</item>
+    </string-array>
 </resources>
