--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="intro_test">봉사에 대한 간단한 설명을 추가합니다. 여기서 사용자는 최대 5줄까지 보여줄 수 있으며, 간단히 소개하는 글을 작성할 수 있습니다. 최대 줄은 5줄이고, 그 이후로는 ...으로 표기하도록 하였습니다. 테스트 용인데 5줄이 넘어가지 않는다면 좋은 것입니다. ...이 나왔나요? 한번 봅시다. 이거는 좋은 어플리케이션입니다.</string>
     <string name="detail_test_text">1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함1000자는 들어가야함</string>
     <string name="report_description">본 정보는 쉐어핸즈의 해당 회원이 제공한 자료로, 쉐어핸즈는 기재된 내용에 대한 오류 및 사용자가 그 내용을 신뢰하여 일어난 모든 결과에 대해 책임을 지지 않습니다. 또한, 본 정보는 쉐어핸즈의 동의 없이 재배포될 수 없음을 알려드립니다.</string>
+    <string name="withdraw_desc">탈퇴를 진행한 후로부터 30일까지는 유예기간으로, 30일 안에 다시 로그인하시면 계정은 복구됩니다.\n\n30일 후 탈퇴가 진행되어도 회원이 직접 작성한 게시글과 댓글, 리뷰 등 UGC(User-Generated Contents) 관련 정보들은 모두 보존됩니다. 그 외 모든 회원 관련 정보들은 폐기되며, 이는 재가입을 하더라도 복원할 수 없습니다.</string>
 
     <!-- spinner 리스트 -->
     <string-array name="location_spinner">
