[FEAT] 게시글 작성 통신 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ShareHands_frontend</string>
+    <string name="app_name">쉐어핸즈\nShareHands</string>
     <string name="NATIVE_APP_KEY">b03a4ceae5d55bdc92ecfbe00ddaf2c1</string>
     <string name="monthly_plans">월별 계획</string>
 
